fix: 從 issue 修改 log 後要觸發 deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows: [Update Log on New Issue]
+    types:
+      - completed
 
 jobs:
   build:
